@@ -679,6 +679,9 @@ mod = mod("CrabBarriersMax", "BASE", {val}, 0, 0, { type = "GlobalEffect", effec
 # Aspect of the Spider
 [spider_aspect_max_web_count]
 mod = mod("Multiplier:SpiderWebApplyStackMax", "BASE", {val})
+# Bear Trap
+[bear_trap_damage_taken_+%_from_traps_and_mines]
+mod = mod("TrapMineDamageTaken", "INC", {val}, 0, 0, { type = "GlobalEffect", effectType = "Debuff" })
 # Blade Vortex
 [blade_vortex_damage_+%_per_blade_final]
 mod = mod("Damage", "MORE", {val}, 0, KeywordFlag.Hit, { type = "Multiplier", var = "BladeVortexBlade" })
